# hierachial_data_and_you

./: manage.py  pyproject.toml
hierachial/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
work/: admin.py  forms.py  models.py  views.py
work/migrations/: 0001_initial.py
